feat: Implement task management with CORS configuration